Timeline date filtering, formatting cleanup, fixing x-axis bug (#7)
* autoformat to 4 space indent

* move granularity selector and adjust css for timeline

* set time-selector-container height to 100% so it isn't broken on my screen

* get date filtering working now for debugging purposes

* fix scale problems on x-axis

* fix closing div tag closing nothing

---------

--- a/css/style.css
+++ b/css/style.css
@@ -1,5 +1,5 @@
 h1 {
-  font-size: 22px;
+    font-size: 22px;
 }
 
 html {
@@ -18,24 +18,12 @@ body {
     grid: 30% auto 20% / 1fr 1fr;
     grid-template-areas:
         "contributor file-tree"
-        "timeline file-tree"
+        "timeline-container file-tree"
         "time-selector file-tree";
 }
 
 #contributor {
     grid-area: contributor;
-    width: 100%;
-    height: 100%;
-}
-
-#timeline {
-    grid-area: timeline;
-    width: 100%;
-    height: 100%;
-}
-
-#time-selector {
-    grid-area: time-selector;
     width: 100%;
     height: 100%;
 }
@@ -47,66 +35,67 @@ body {
 }
 
 .beside {
-  display: flex;
-  flex-direction: row;
-  justify-content: center;
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
 }
 
 .time-selector-container {
-  border: 1px solid rgb(222, 222, 222);
-  padding: 10px 5px 0 5px;
-  border-radius: 5px;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
+    border: 1px solid rgb(222, 222, 222);
+    padding: 10px 5px 0 5px;
+    border-radius: 5px;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    height: 100%;
 }
 
 #time-selector-tooltip {
-  position: absolute;
-  display: none;
-  background: #212529;
-  border-radius: 5px;
-  font-size: 6px;
-  font-weight: 500;
-  padding: 8px;
-  min-width: 80px;
-  color: white;
+    position: absolute;
+    display: none;
+    background: #212529;
+    border-radius: 5px;
+    font-size: 6px;
+    font-weight: 500;
+    padding: 8px;
+    min-width: 80px;
+    color: white;
 }
 
 .domain {
-  display: none;
+    display: none;
 }
 
 .months-label {
-  font-size: 12px;
+    font-size: 12px;
 }
 
 .time-selector-y-axis {
-  transform: translate(0, -3px);
+    transform: translate(0, -3px);
 }
 
 .block {
-  cursor: pointer;
-  stroke: #e0e2e5;
-  stroke-width: 0.5;
+    cursor: pointer;
+    stroke: #e0e2e5;
+    stroke-width: 0.5;
 }
 
 .block:hover {
-  stroke: black;
+    stroke: black;
 }
 
 .block-selected {
-  stroke: #2a9adb;
-  stroke-width: 1;
+    stroke: #2a9adb;
+    stroke-width: 1;
 }
 
 .time-selector-active {
-  stroke: #2a9adb;
-  stroke-width: 1;
+    stroke: #2a9adb;
+    stroke-width: 1;
 }
 
 .contribution-label {
-  font-size: 8px;
+    font-size: 8px;
 }
 
 #tooltip {
@@ -120,20 +109,38 @@ body {
     padding: 8px;
     min-width: 160px;
     color: #333;
-  }
+}
 
-  .tooltip-title {
+.tooltip-title {
     color: #000;
     font-size: 14px;
     font-weight: 600;
-  }
-  #tooltip ul {
+}
+
+#tooltip ul {
     margin: 5px 0 0 0;
     padding-left: 20px;
-  }
+}
 
 
-/* timelineVis.js */
+/* ------------------------------ timelineVis.js ------------------------------- */
+#timeline-container {
+    grid-area: timeline-container;
+    width: 100%;
+    height: 100%;
+}
+
+#timeline {
+    width: 100%;
+    height: 80%;
+}
+
+#time-selector {
+    grid-area: time-selector;
+    width: 100%;
+    height: 100%;
+}
+
 .barPos {
     fill: mediumseagreen;
 }
